--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,7 @@ body {
 h1, h2, h3 {
   text-align: center;
   color: var(--cor-do-titulo);
-  font-size: 30px;
+  font-size: 20px;
 }
 
 /* Estilos da calculadora */
@@ -46,21 +46,23 @@ h1, h2, h3 {
 
 /* Estilos do visor */
 .display {
-  display: block;
+  
   background-color: var(--cor-do-visor);
   color: var(--cor-text-display);
   padding: 10px;
-  border-radius: 4px;
+    border-radius: 4px;
   margin-bottom: 20px;
   width: 100%;
   text-align: right;
+  display: block;
 }
 
 .display p {
-  display: block;
+  
   padding: 10px 20px;
   margin: 0;
   font-size: 18px;
+  
 }
 
 /* Estilos dos botões */
@@ -82,8 +84,8 @@ h1, h2, h3 {
   color: var(--cor-texto-botao);
   border: none;
   border-radius: 4px;
-  padding: 20px;
-  font-size: 18px;
+  padding: 18px;
+  font-size: 20px;
   cursor: pointer;
   box-shadow: var(--sombras);
   transition: all 0.3s ease;
@@ -156,6 +158,9 @@ body::before {
     width: 280px;
     height: 360px;
   }
+  .button {
+    padding: 8px;
+}
   
   h1, h2, h3 {
       font-size: 14px;
